--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@line/liff": "^2.20.2",
+    "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "line-notify-nodejs": "^1.0.1",
     "nuxt": "^2.15.8",
